--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sozialhelden/a11yjson": "^10.0.0",
     "d3": "^6.1.1",
     "gunzip-file": "^0.1.1",
+    "rd-to-wgs84": "^1.0.0",
     "website-scraper": "^4.2.3",
     "website-scraper-existing-directory": "^0.1.0",
     "xml2js": "^0.4.23"
